# AVCrypt

./: Cargo.toml  LICENSE
benches/: benchmarks.rs  my_bench.rs
benches/tasks/: mod.rs
benches/tasks/cube_init/: decryption.rs  decryption_cube_instance.rs  mod.rs
src/: cube.rs  encrypt.rs  lib.rs  main.rs
src/cli/: app.rs  errors.rs  mod.rs
src/cli/functions/: decryption.rs  encryption.rs  mod.rs
src/mix/: mod.rs
src/utils/: gen_rand_pos.rs  mod.rs
