[package]
name = "avcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
clap = { version = "4.2.4", features = ["derive"]}
rand = "0.8.5"
owo-colors = "3.5.0"
throbber = "0.1.4"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }